# town-digest

./: .envrc  .gitignore  AGENTS.md  Procfile  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js
.github/workflows/: ci.yml
docs/: architecture.md  email.md
migrations/: env.py
migrations/versions/: 68c266563efa_initial_schema.py  6a2efc896fbd_email_updates.py  84f4f2887408_cascade_delete_email_links.py
src/town_digest/: config.py  db.py
src/town_digest/app/: main.py
src/town_digest/app/commands/: __init__.py  seed.py
src/town_digest/app/static/css/: app.css
src/town_digest/app/templates/: base.html  edition_digest.html  index.html
src/town_digest/models/: __init__.py  announcement.py  associations.py  base.py  edition.py  email.py  email_alias.py  event.py
src/town_digest/pipelines/: ingest_email.py  ingest_emails.py
src/town_digest/seeds/: __init__.py  loader.py
src/town_digest/utils/: __init__.py  announcement_extractor.py  email_client.py  events_extractor.py  openai_client.py
tests/: conftest.py  test_app_routes.py  test_config.py  test_db.py  test_email_client.py  test_events_extractor.py  test_models.py
