[project]
name = "town-digest"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "prefect>=3.6.16",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "pytest>=9.0.2",
]
