[project]
name = "town-digest"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "imapclient>=2.3.1",
    "prefect>=3.6.16",
    "sqlalchemy>=2.0.46",
    "alembic>=1.16.2",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "pytest>=9.0.2",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
